--- a/GameTeam/wwwroot/pages/Register.html
+++ b/GameTeam/wwwroot/pages/Register.html
@@ -28,10 +28,10 @@
 
         <div class="content">
             <header>
-                
-                <div class="auth-status">Вход не выполнен</div>
-
-
+                <div class="auth-wrapper">
+                    <div class="header-profile-image"></div>
+                    <div class="auth-status">ИванБезФамилии</div> <!-- Надо бы ограничить длину имени... -->
+                </div>
             </header>
 
             <main>
