have hidden the "free time" tab

--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -55,10 +55,10 @@
                             <img src="../img/about.svg" alt="Обо мне">
                             Обо мне
                         </li>
-                        <li class="tab-link" data-tab="free-time">
-                            <img src="../img/free-time.svg" alt="Свободное время">
-                            Свободное время
-                        </li>
+<!--                        <li class="tab-link" data-tab="free-time">-->
+<!--                            <img src="../img/free-time.svg" alt="Свободное время">-->
+<!--                            Свободное время-->
+<!--                        </li>-->
                         <li class="tab-link" data-tab="hobbies">
                             <img src="../img/plays.svg" alt="Игры">
                             Игры
