Questionnaires page js added

--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -34,7 +34,13 @@
             </header>
 
             <div class="questionnaires-container">
-                
+
+            </div>
+
+            <div class="load-more-container">
+                <button class="load-more-button" id="load-more-button">
+                    Загрузить ещё
+                </button>
             </div>
         </div>
 
