--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -14,11 +14,11 @@
         <aside class="sidebar">
             <div class="logo">GameTeam</div>
             <nav class="sidebar-nav">
-                <a href="#">
+                <a href="/Questionnaires">
                     <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
                     <span class="nav-text">Анкеты</span>
                 </a>
-                <a href="#">
+                <a href="/My_questionnaires">
                     <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
                     <span class="nav-text">Мои анкеты</span>
                 </a>
@@ -62,11 +62,12 @@
                         <label>Цель:<span class="required" style="display: none;">*</span></label>
                         <p id="questionnaire-goal" contenteditable="false" data-placeholder="Введите цель игры"></p>
                     </div>
-                    <div class="questionnaire-section">
-                        <label>Время:</label>
-                        <p id="questionnaire-time" contenteditable="false"
-                            data-placeholder="Введите удобное время для игры"></p>
-                    </div>
+<!--                    todo: пока без времени-->
+<!--                    <div class="questionnaire-section">-->
+<!--                        <label>Время:</label>-->
+<!--                        <p id="questionnaire-time" contenteditable="false"-->
+<!--                            data-placeholder="Введите удобное время для игры"></p>-->
+<!--                    </div>-->
                     <div class="questionnaire-section last-section">
                         <label>Контакты:<span class="required" style="display: none;">*</span></label>
                         <p id="questionnaire-contacts" contenteditable="false"
