--- a/GameTeam/wwwroot/pages/Register.html
+++ b/GameTeam/wwwroot/pages/Register.html
@@ -14,11 +14,11 @@
         <aside class="sidebar">
             <div class="logo">GameTeam</div>
             <nav class="sidebar-nav">
-                <a href="#">
+                <a href="/Questionnaires">
                     <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
                     <span class="nav-text">Анкеты</span>
                 </a>
-                <a href="#">
+                <a href="/My_questionnaires">
                     <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
                     <span class="nav-text">Мои анкеты</span>
                 </a>
@@ -28,10 +28,11 @@
 
         <div class="content">
             <header>
-                <div class="auth-wrapper">
-                    <div class="header-profile-image"></div>
-                    <div class="auth-status">ИванБезФамилии</div> <!-- Надо бы ограничить длину имени... -->
-                </div>
+<!--&lt;!&ndash;                todo: пока скрою, потом надо будет отображать, если был выполнен вход&ndash;&gt;-->
+<!--                <div class="auth-wrapper">-->
+<!--                    <div class="header-profile-image"></div>-->
+<!--                    <div class="auth-status">ИванБезФамилии</div> &lt;!&ndash; Надо бы ограничить длину имени... &ndash;&gt;-->
+<!--                </div>-->
 
             </header>
 
