--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -14,11 +14,11 @@
         <aside class="sidebar">
             <div class="logo">GameTeam</div>
             <nav class="sidebar-nav">
-                <a href="#">
+                <a href="/Questionnaires">
                     <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
                     <span class="nav-text">Анкеты</span>
                 </a>
-                <a href="#">
+                <a href="/My_questionnaires">
                     <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
                     <span class="nav-text">Мои анкеты</span>
                 </a>
