--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -18,7 +18,7 @@
                     <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
                     <span class="nav-text">Анкеты</span>
                 </a>
-                <a href="/my_questionnaries">
+                <a href="/My_questionnaires">
                     <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
                     <span class="nav-text">Мои анкеты</span>
                 </a>
