Added loadAndRenderUserName in Questionnaire/My_questionnaire

--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -29,7 +29,7 @@
             <header>
                 <div class="auth-wrapper">
                     <div class="header-profile-image"></div>
-                    <div class="auth-status">ИванБезФамилии</div>
+                    <a href="../pages/Profile.html" class="auth-status user-name">Имя загружается...</a>
                 </div>
             </header>
 
