--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -29,7 +29,7 @@
             <header>
                 <div class="auth-wrapper">
                     <div class="header-profile-image"></div>
-                    <div class="auth-status user-name"></div> <!-- Надо бы ограничить длину имени... -->
+                    <a href="../pages/Profile.html" class="auth-status user-name">Имя загружается...</a>
                 </div>
             </header>
 
@@ -37,8 +37,8 @@
                 <div class="profile-header">
                     <div class="profile-image"></div>
                     <div class="profile-info">
-                        <h2 class="user-name"></h2> <!-- А то тут будет весело -->
-                        <p id="user-email"></p> <!-- Тут почта -->
+                        <h2 class="user-name">Имя загружается...</h2> <!-- А то тут будет весело -->
+                        <p id="user-email">Почта загружается...</p> <!-- Тут почта -->
                         <div class="edit-buttons">
                             <button id="edit-button" class="outline-button" disabled>Редактировать профиль</button>
                             <div id="save-cancel-buttons" style="display: none;">
