deactivating buttons when loading in profile

--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     </div>
-    <script src="../js/my_questionnaire.js"></script>
+    <script src="../js/my_questionnaire.js" type="module"></script>
 </body>
 
 </html>
