--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -95,7 +95,7 @@
             </div>
         </div>
     </div>
-    <script src="../js/profile.js"></script>
+    <script src="../js/profile.js" type="module"></script>
 </body>
 
 </html>
