hid the goal (so that there would be no question: "why am I entering one thing and the other is displayed")

--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -46,7 +46,7 @@
                     <div class="questionnaire-section">
                         <label>Описание:</label>
                         <p id="questionnaire-description" contenteditable="false"
-                            data-placeholder="Введите описание анкеты"></p>
+                           data-placeholder="Введите описание анкеты"></p>
                     </div>
                     <div class="questionnaire-section">
                         <label>Игры:<span class="required" style="display: none;">*</span></label>
@@ -58,20 +58,21 @@
                             <button id="add-game-button" class="outline-button">Добавить</button>
                         </div>
                     </div>
-                    <div class="questionnaire-section">
+                    <!--                    todo: пока без цели-->
+                    <div class="questionnaire-section" style="display: none;">
                         <label>Цель:<span class="required" style="display: none;">*</span></label>
                         <p id="questionnaire-goal" contenteditable="false" data-placeholder="Введите цель игры"></p>
                     </div>
-<!--                    todo: пока без времени-->
-<!--                    <div class="questionnaire-section">-->
-<!--                        <label>Время:</label>-->
-<!--                        <p id="questionnaire-time" contenteditable="false"-->
-<!--                            data-placeholder="Введите удобное время для игры"></p>-->
-<!--                    </div>-->
+                    <!--                    todo: и без времени-->
+                    <!--                    <div class="questionnaire-section">-->
+                    <!--                        <label>Время:</label>-->
+                    <!--                        <p id="questionnaire-time" contenteditable="false"-->
+                    <!--                            data-placeholder="Введите удобное время для игры"></p>-->
+                    <!--                    </div>-->
                     <div class="questionnaire-section last-section">
                         <label>Контакты:<span class="required" style="display: none;">*</span></label>
                         <p id="questionnaire-contacts" contenteditable="false"
-                            data-placeholder="Введите ваши контакты (например, Telegram)"></p>
+                           data-placeholder="Введите ваши контакты (например, Telegram)"></p>
                     </div>
                 </div>
                 <div class="bottom-section" id="bottom-section">
