--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -54,7 +54,7 @@
                     <div class="modal-section"><label>Игры:</label>
                         <ul class="modal-games"></ul>
                     </div>
-                    <div class="modal-section"><label>Цель:</label>
+                    <div class="modal-section" style="display: none;"><label>Цель:</label>
                         <p class="modal-purpose"></p>
                     </div>
                     <div class="modal-section"><label>Время:</label>
