--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -7,6 +7,7 @@
     <title>GameTeam - Анкеты</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/questionnaires.css">
+    <link rel="stylesheet" href="../css/filters.css">
 </head>
 
 <body>
@@ -24,26 +25,25 @@
                 </a>
             </nav>
         </aside>
-
         <div class="content">
             <header>
+                <div class="filter-container">
+                    <div class="filter-toggle">Фильтры <svg class="chevron" viewBox="0 0 24 24">
+                            <path d="M7 10l5 5 5-5z" />
+                        </svg></div>
+                    <div class="selected-filters"></div>
+                </div>
                 <div class="auth-wrapper">
                     <div class="header-profile-image"></div>
                     <a href="../pages/Profile.html" class="auth-status user-name">Имя загружается...</a>
                 </div>
             </header>
 
-            <div class="questionnaires-container">
-
-            </div>
-
+            <div class="questionnaires-container"></div>
             <div class="load-more-container">
-                <button class="load-more-button" id="load-more-button">
-                    Загрузить ещё
-                </button>
+                <button class="load-more-button" id="load-more-button">Загрузить ещё</button>
             </div>
         </div>
-
         <template id="modal-template">
             <div class="modal-overlay">
                 <div class="modal-content">
@@ -70,6 +70,7 @@
             </div>
         </template>
     </div>
+    <script src="../js/filters.js"></script>
     <script src="../js/questionnaires.js"></script>
 </body>
 
