верстка цели и времени in my_questionnaire

--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -60,14 +60,12 @@
                     </div>
                     <div class="questionnaire-section">
                         <label>Цель:<span class="required" style="display: none;">*</span></label>
-                        <p id="questionnaire-goal" contenteditable="false" data-placeholder="Введите цель игры"></p>
+                        <div id="questionnaire-goal"></div>
                     </div>
-<!--                    todo: пока без времени-->
-<!--                    <div class="questionnaire-section">-->
-<!--                        <label>Время:</label>-->
-<!--                        <p id="questionnaire-time" contenteditable="false"-->
-<!--                            data-placeholder="Введите удобное время для игры"></p>-->
-<!--                    </div>-->
+                    <div class="questionnaire-section">
+                        <label>Время:</label>
+                        <div id="questionnaire-time"></div>
+                    </div>
                     <div class="questionnaire-section last-section">
                         <label>Контакты:<span class="required" style="display: none;">*</span></label>
                         <p id="questionnaire-contacts" contenteditable="false"
