раскомментил цели чуть увеличил кол-во анкет на страницу

--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -28,9 +28,11 @@
         <div class="content">
             <header>
                 <div class="filter-container">
-                    <div class="filter-toggle">Фильтры <svg class="chevron" viewBox="0 0 24 24">
-                            <path d="M7 10l5 5 5-5z" />
-                        </svg></div>
+                    <div class="filter-toggle">Фильтры
+                        <svg class="chevron" viewBox="0 0 24 24">
+                            <path d="M7 10l5 5 5-5z"/>
+                        </svg>
+                    </div>
                     <div class="selected-filters"></div>
                 </div>
                 <div class="auth-wrapper">
@@ -54,7 +56,7 @@
                     <div class="modal-section"><label>Игры:</label>
                         <ul class="modal-games"></ul>
                     </div>
-                    <div class="modal-section" style="display: none;"><label>Цель:</label>
+                    <div class="modal-section"><label>Цель:</label>
                         <p class="modal-purpose"></p>
                     </div>
                     <div class="modal-section"><label>Время:</label>
