single entry point for questionnaires

--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -72,8 +72,7 @@
             </div>
         </template>
     </div>
-    <script src="../js/filters.js"></script>
-    <script src="../js/questionnaires.js"></script>
+    <script src="../js/questionnaires.js" type="module"></script>
 </body>
 
 </html>
