--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/questionnaires.css">
     <link rel="stylesheet" href="../css/filters.css">
+    <link rel="stylesheet" href="../css/questionnaire-template.css">
 </head>
 
 <body>
@@ -47,6 +48,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/questionnaire-template.js" type="module"></script>
     <script src="../js/questionnaires.js" type="module"></script>
 </body>
 
