--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -32,44 +32,36 @@
                     <a href="../pages/Profile.html" class="auth-status user-name">Имя загружается...</a>
                 </div>
             </header>
-
             <div class="questionnaire-container">
                 <div class="questionnaire-status">
                     <span>Статус: </span><span id="status-text">не размещена</span>
                 </div>
-                <div class="questionnaire-content" id="questionnaire-content">
-                    <div class="questionnaire-section">
-                        <label>Название:<span class="required" style="display: none;">*</span></label>
-                        <h2 id="questionnaire-title" contenteditable="false" data-placeholder="Введите название анкеты">
-                        </h2>
-                    </div>
-                    <div class="questionnaire-section">
-                        <label>Описание:</label>
-                        <p id="questionnaire-description" contenteditable="false"
-                            data-placeholder="Введите описание анкеты"></p>
-                    </div>
-                    <div class="questionnaire-section">
-                        <label>Игры:<span class="required" style="display: none;">*</span></label>
-                        <div class="games-container">
-                            <ul id="questionnaire-games"></ul>
+                <div class="questionnaire">
+                    <div class="questionnaire-scrollable">
+                        <div class="questionnaire-content">
+                            <h2 class="questionnaire-title" contenteditable="false"
+                                data-placeholder="Введите название анкеты"></h2>
+                            <div class="questionnaire-section description-section">
+                                <p class="questionnaire-description" contenteditable="false"
+                                    data-placeholder="Введите описание анкеты"></p>
+                            </div>
+                            <div class="questionnaire-section games-section">
+                                <label>Игры:<span class="required" style="display: none;"></span></label>
+                                <ul class="games-list"></ul>
+                                <div id="add-game-section">
+                                    <input type="text" id="new-game-input" placeholder="Новая игра">
+                                    <button id="add-game-button" class="outline-button">Добавить</button>
+                                </div>
+                            </div>
+                            <div class="questionnaire-section purpose-section">
+                                <label>Цель:<span class="required" style="display: none;"></span></label>
+                                <div class="questionnaire-purpose"></div>
+                            </div>
+                            <div class="questionnaire-section availability-section" id="questionnaire-time">
+                                <label>Время:</label>
+                                <div class="availability"></div>
+                            </div>
                         </div>
-                        <div id="add-game-section" style="display: none;">
-                            <input type="text" id="new-game-input" placeholder="Новая игра">
-                            <button id="add-game-button" class="outline-button">Добавить</button>
-                        </div>
-                    </div>
-                    <div class="questionnaire-section">
-                        <label>Цель:<span class="required" style="display: none;">*</span></label>
-                        <div id="questionnaire-goal"></div>
-                    </div>
-                    <div class="questionnaire-section">
-                        <label>Время:</label>
-                        <div id="questionnaire-time"></div>
-                    </div>
-                    <div class="questionnaire-section last-section">
-                        <label>Контакты:<span class="required" style="display: none;">*</span></label>
-                        <p id="questionnaire-contacts" contenteditable="false"
-                            data-placeholder="Введите ваши контакты (например, Telegram)"></p>
                     </div>
                 </div>
                 <div class="bottom-section" id="bottom-section">
