--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -6,33 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GameTeam - Профиль</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/sidebar.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/profile.css">
 </head>
 
 <body>
-<div class="layout">
-    <aside class="sidebar">
-        <div class="logo">GameTeam</div>
-        <nav class="sidebar-nav">
-            <a href="/questionnaires">
-                <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
-                <span class="nav-text">Анкеты</span>
-            </a>
-            <a href="/My_questionnaires">
-                <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
-                <span class="nav-text">Мои анкеты</span>
-            </a>
-        </nav>
-    </aside>
-
+    <div class="layout">
+        <div id="sidebar-placeholder"></div>
         <div class="content">
-            <header>
-                <div class="auth-wrapper">
-                    <div class="header-profile-image"></div>
-                    <a href="../pages/Profile.html" class="auth-status user-name">Имя загружается...</a>
-                </div>
-            </header>
-
+            <div id="header-placeholder"></div>
             <div class="profile-container">
                 <div class="profile-header">
                     <div class="profile-image"></div>
