--- a/GameTeam/wwwroot/pages/Sidebar.html
+++ b/GameTeam/wwwroot/pages/Sidebar.html
@@ -5,7 +5,7 @@
             <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
             <span class="nav-text">Анкеты</span>
         </a>
-        <a href="/My_questionnaires">
+        <a href="/My_questionnaires" class="my-q">
             <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
             <span class="nav-text">Мои анкеты</span>
         </a>
