--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -68,6 +68,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/header.js" type="module"></script>
     <script src="../js/my_questionnaire.js" type="module"></script>
 </body>
 
