--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -78,6 +78,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/header.js" type="module"></script>
     <script src="../js/profile.js" type="module"></script>
 </body>
 
