--- a/GameTeam/wwwroot/pages/Sidebar.html
+++ b/GameTeam/wwwroot/pages/Sidebar.html
@@ -9,5 +9,9 @@
             <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
             <span class="nav-text">Мои анкеты</span>
         </a>
+        <a href="/My_teams" class="my-teams">
+            <img src="../img/my-teams.svg" alt="Мои команды" class="nav-icon">
+            <span class="nav-text">Мои команды</span>
+        </a>
     </nav>
 </aside>
