добавлены уведомления, подтверждение заявки

--- a/GameTeam/wwwroot/pages/Header.html
+++ b/GameTeam/wwwroot/pages/Header.html
@@ -1,6 +1,13 @@
 <header>
     <div class="auth-wrapper">
-        <img src="../img/bell.svg" alt="Notifications" class="header-notification-bell">
+        <div class="notification-wrapper">
+            <img src="../img/bell.svg" alt="Notifications" class="header-notification-bell">
+            <div class="notifications-panel" style="display: none;">
+                <div class="notifications-content">
+                    <p class="no-notifications">Затишье перед бурей — новых заявок нет! 😴</p>
+                </div>
+            </div>
+        </div>
         <div class="header-profile-image"></div>
         <a href="../pages/Profile.html" class="auth-status user-name">Имя загружается...</a>
     </div>
