other's profiles rendering

--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -16,7 +16,7 @@
         <div id="sidebar-placeholder"></div>
         <div class="content">
             <div id="header-placeholder"></div>
-            <div class="profile-container">
+            <div class="profile-container" id="profileContainer">
                 <div class="profile-header">
                     <div class="profile-image"></div>
                     <div class="profile-info">
