+ incorrect status fix + incorrect name rendering in header fix

--- a/GameTeam/wwwroot/pages/Header.html
+++ b/GameTeam/wwwroot/pages/Header.html
@@ -9,6 +9,6 @@
             </div>
         </div>
         <div class="header-profile-image"></div>
-        <a href="../pages/Profile.html" class="auth-status user-name">Имя загружается...</a>
+        <a href="../pages/Profile.html" class="auth-status user-name" id="user-name-header">Имя загружается...</a>
     </div>
 </header>
