--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -20,7 +20,7 @@
                 <div class="profile-header">
                     <div class="profile-image"></div>
                     <div class="profile-info">
-                        <h2 class="user-name">Имя загружается...</h2> <!-- А то тут будет весело -->
+                        <h2 id="user-name-main" class="user-name">Имя загружается...</h2> <!-- А то тут будет весело -->
                         <p id="user-email">Почта загружается...</p> <!-- Тут почта -->
                         <div class="edit-buttons">
                             <button id="edit-button" class="outline-button" disabled>Редактировать профиль</button>
