Кнопка выхода в профиле

--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -23,6 +23,7 @@
                         <h2 id="user-name-main" class="user-name">Имя загружается...</h2> <!-- А то тут будет весело -->
                         <p id="user-email">Почта загружается...</p> <!-- Тут почта -->
                         <div class="edit-buttons">
+                            <button id="logout-button" class="outline-button">Выйти</button>
                             <button id="edit-button" class="outline-button" disabled>Редактировать профиль</button>
                             <div id="save-cancel-buttons" style="display: none;">
                                 <button id="cancel-button" class="outline-button">Отмена</button>
