Add members and editing them in my_questionnaire

--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/my_questionnaire.css">
+    <link rel="stylesheet" href="../css/questionnaire-template.css">
 </head>
 
 <body>
@@ -60,7 +61,6 @@
                         </div>
                     </div>
                     <div class="edit-buttons" id="edit-buttons" style="display: none;">
-                        <button id="clear-button" class="outline-button">Очистить</button>
                         <button id="cancel-button" class="outline-button">Отмена</button>
                         <button id="save-button" class="filled-button">Сохранить изменения</button>
                     </div>
