Add profile icons

--- a/GameTeam/wwwroot/pages/Profile.html
+++ b/GameTeam/wwwroot/pages/Profile.html
@@ -36,7 +36,7 @@
                 <div class="tabs-section">
                     <ul class="tabs">
                         <li class="tab-link active" data-tab="about">
-                            <img src="../img/about.svg" alt="Обо мне">
+                            <img src="../img/about-active.svg" alt="Обо мне">
                             Обо мне
                         </li>
                         <!--                        <li class="tab-link" data-tab="free-time">-->
