--- a/GameTeam/wwwroot/pages/Sidebar.html
+++ b/GameTeam/wwwroot/pages/Sidebar.html
@@ -2,16 +2,21 @@
     <div class="logo">GameTeam</div>
     <nav class="sidebar-nav">
         <a href="/questionnaires">
-            <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
-            <span class="nav-text">Анкеты</span>
+            <img src="../img/questionnaires.svg" alt="Анкеты" class="nav-icon">
+            <span class="nav-text">Поиск команд</span>
         </a>
         <a href="/My_questionnaires" class="my-q">
-            <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
-            <span class="nav-text">Мои анкеты</span>
+            <img src="../img/my_questionnaires.svg" alt="Моя анкета" class="nav-icon">
+            <span class="nav-text">Моя анкета</span>
+        </a>
+        <a href="/pending_requests">
+            <img src="../img/pending_requests.svg" alt="Мои заявки" class="nav-icon">
+            <span class="nav-text">Мои заявки</span>
         </a>
         <a href="/My_teams" class="my-teams">
-            <img src="../img/my-teams.svg" alt="Мои команды" class="nav-icon">
+            <img src="../img/teams.svg" alt="Мои команды" class="nav-icon">
             <span class="nav-text">Мои команды</span>
         </a>
+
     </nav>
 </aside>
