Add active icons

--- a/GameTeam/wwwroot/pages/Questionnaires.html
+++ b/GameTeam/wwwroot/pages/Questionnaires.html
@@ -15,7 +15,9 @@
 
 <body>
     <div class="layout">
+        <div id="sidebar-placeholder"></div>
         <div class="content">
+            <div id="header-placeholder"></div>
             <div class="questionnaires-container"></div>
             <div class="load-more-container">
                 <button class="load-more-button" id="load-more-button">Загрузить ещё</button>
