fix отображение страниц для неавторизированного

--- a/GameTeam/wwwroot/pages/Sidebar.html
+++ b/GameTeam/wwwroot/pages/Sidebar.html
@@ -1,7 +1,7 @@
 <aside class="sidebar">
     <div class="logo">GameTeam</div>
     <nav class="sidebar-nav">
-        <a href="/questionnaires">
+        <a href="/Questionnaires">
             <img src="../img/questionnaires.svg" alt="Анкеты" class="nav-icon">
             <span class="nav-text">Поиск команд</span>
         </a>
@@ -9,7 +9,7 @@
             <img src="../img/my_questionnaires.svg" alt="Моя анкета" class="nav-icon">
             <span class="nav-text">Моя анкета</span>
         </a>
-        <a href="/pending_requests">
+        <a href="/Pending_requests" class="pending-requests">
             <img src="../img/pending_requests.svg" alt="Мои заявки" class="nav-icon">
             <span class="nav-text">Мои заявки</span>
         </a>
