--- a/GameTeam/wwwroot/pages/Register.html
+++ b/GameTeam/wwwroot/pages/Register.html
@@ -14,10 +14,10 @@
         <aside class="sidebar">
             <div class="logo">GameTeam</div>
             <nav class="sidebar-nav">
-                <a href="/questionnaires">
-                    <img src="../img/anketa.svg" alt="Анкеты" class="nav-icon">
-                    <span class="nav-text">Анкеты</span>
-                </a>
+            <a href="/Questionnaires">
+                <img src="../img/questionnaires.svg" alt="Анкеты" class="nav-icon">
+                <span class="nav-text">Поиск команд</span>
+            </a>
                 <!-- <a href="/My_questionnaires">
                     <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
                     <span class="nav-text">Мои анкеты</span>
