--- a/GameTeam/wwwroot/pages/My_questionnaire.html
+++ b/GameTeam/wwwroot/pages/My_questionnaire.html
@@ -19,7 +19,7 @@
             <div id="header-placeholder"></div>
             <div class="questionnaire-container">
                 <div class="questionnaire-status">
-                    <span>Статус: </span><span id="status-text">не размещена</span>
+                    <span>Статус: </span><span id="status-text"></span>
                 </div>
                 <div class="questionnaire">
                     <div class="questionnaire-scrollable">
