--- a/GameTeam/wwwroot/pages/Register.html
+++ b/GameTeam/wwwroot/pages/Register.html
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <script src="../js/register.js"></script>
+    <script type="module" src="../js/register.js"></script>
 </body>
 
 </html>
