adaptability: moving the nav panel, displaying the tab name in the header

--- a/GameTeam/wwwroot/pages/Header.html
+++ b/GameTeam/wwwroot/pages/Header.html
@@ -1,4 +1,5 @@
 <header>
+    <div class="header-title"></div>
     <div class="auth-wrapper">
         <div class="notification-wrapper">
             <img src="../img/bell.svg" alt="Notifications" class="header-notification-bell">
