--- a/GameTeam/wwwroot/pages/Sidebar.html
+++ b/GameTeam/wwwroot/pages/Sidebar.html
@@ -20,3 +20,10 @@
 
     </nav>
 </aside>
+
+<nav class="bottom-nav">
+    <a href="/Questionnaires"><img src="../img/questionnaires.svg" alt="Поиск команд"></a>
+    <a href="/My_questionnaires"><img src="../img/my_questionnaires.svg" alt="Моя анкета"></a>
+    <a href="/Pending_requests"><img src="../img/pending_requests.svg" alt="Мои заявки"></a>
+    <a href="/My_teams"><img src="../img/teams.svg" alt="Мои команды"></a>
+</nav>
