--- a/GameTeam/wwwroot/pages/Register.html
+++ b/GameTeam/wwwroot/pages/Register.html
@@ -7,24 +7,13 @@
     <title>GameTeam — Вход</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
 </head>
 
 <body>
     <div class="layout">
-        <aside class="sidebar">
-            <div class="logo">GameTeam</div>
-            <nav class="sidebar-nav">
-            <a href="/Questionnaires">
-                <img src="../img/questionnaires.svg" alt="Анкеты" class="nav-icon">
-                <span class="nav-text">Поиск команд</span>
-            </a>
-                <!-- <a href="/My_questionnaires">
-                    <img src="../img/my-ankety.svg" alt="Мои анкеты" class="nav-icon">
-                    <span class="nav-text">Мои анкеты</span>
-                </a> -->
-            </nav>
-        </aside>
-
+        <div id="sidebar-placeholder"></div>
 
         <div class="content">
             <header>
