--- a/GameTeam/wwwroot/pages/Sidebar.html
+++ b/GameTeam/wwwroot/pages/Sidebar.html
@@ -23,7 +23,7 @@
 
 <nav class="bottom-nav">
     <a href="/Questionnaires"><img src="../img/questionnaires.svg" alt="Поиск команд"></a>
-    <a href="/My_questionnaires"><img src="../img/my_questionnaires.svg" alt="Моя анкета"></a>
-    <a href="/Pending_requests"><img src="../img/pending_requests.svg" alt="Мои заявки"></a>
-    <a href="/My_teams"><img src="../img/teams.svg" alt="Мои команды"></a>
+    <a href="/My_questionnaires" class="my-q"><img src="../img/my_questionnaires.svg" alt="Моя анкета"></a>
+    <a href="/Pending_requests" class="pending-requests"><img src="../img/pending_requests.svg" alt="Мои заявки"></a>
+    <a href="/My_teams" class="my-teams"><img src="../img/teams.svg" alt="Мои команды"></a>
 </nav>
