adaptability: filters, my_questionnaire, fixes

--- a/GameTeam/wwwroot/pages/Header.html
+++ b/GameTeam/wwwroot/pages/Header.html
@@ -1,5 +1,7 @@
 <header>
-    <div class="header-title"></div>
+    <div class="left-side">
+        <div class="header-title"></div>
+    </div>
     <div class="auth-wrapper">
         <div class="notification-wrapper">
             <img src="../img/bell.svg" alt="Notifications" class="header-notification-bell">
